--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -33,6 +33,6 @@ jobs:
           K_VERSION="$(cat deps/k_release)"
           sed -i 's!pyk = { git = "https://github.com/runtimeverification/k.git", tag = "[v0-9\.]*", subdirectory = "pyk" }!pyk = { git = "https://github.com/runtimeverification/k.git", tag = "v'${K_VERSION}'", subdirectory = "pyk" }!' pyproject.toml
           poetry update
-          git add . && git commit -m "Sync Poetry files ${K_VERSION}" || true
+          git add . && git commit -m "pyproject.toml: sync pyk version ${K_VERSION}" || true
       - name: 'Push updates'
         run: git push
