Install riscv-gnu-toolchain in with-docker action

--- a/.github/actions/with-docker/Dockerfile
+++ b/.github/actions/with-docker/Dockerfile
@@ -8,6 +8,24 @@ RUN    apt-get -y update             \
          graphviz                    \
          python${PYTHON_VERSION}     \
          python${PYTHON_VERSION}-dev \
+         autoconf                    \
+         automake                    \
+         autotools-dev               \
+         curl                        \
+         libmpc-dev                  \
+         libmpfr-dev                 \
+         libgmp-dev                  \
+         gawk                        \
+         build-essential             \
+         bison                       \
+         flex                        \
+         texinfo                     \
+         gperf                       \
+         libtool                     \
+         patchutils                  \
+         bc                          \
+         zlib1g-dev                  \
+         libexpat-dev                \
     && apt-get -y clean
 
 ARG USER_ID=9876
@@ -20,3 +38,15 @@ WORKDIR /home/user
 
 ENV PATH=/home/user/.local/bin:${PATH}
 RUN curl -sSL https://install.python-poetry.org | python3 -
+
+RUN pip3 install git+https://github.com/riscv/riscof.git
+
+ENV RISCV=/opt/riscv
+ENV PATH=$PATH:$RISCV/bin
+
+RUN git clone --recursive https://github.com/riscv/riscv-gnu-toolchain -b 2024.04.12 && \
+    cd riscv-gnu-toolchain && \
+    ./configure --prefix=$RISCV --enable-multilib && \
+    make && \
+    cd .. && \
+    rm -rf riscv-gnu-toolchain
