Add arguments at top-level for use in all stages

--- a/.github/actions/with-docker/Dockerfile
+++ b/.github/actions/with-docker/Dockerfile
@@ -1,3 +1,6 @@
+ARG K_VERSION
+ARG TOOLCHAIN_VERSION
+
 ARG TOOLCHAIN_VERSION
 FROM runtimeverificationinc/riscv-gnu-toolchain:ubuntu-jammy-${TOOLCHAIN_VERSION} as TOOLCHAIN
 
