--- a/.github/actions/with-docker/Dockerfile
+++ b/.github/actions/with-docker/Dockerfile
@@ -27,7 +27,7 @@ WORKDIR /home/user
 ENV PATH=/home/user/.local/bin:${PATH}
 RUN curl -sSL https://install.python-poetry.org | python3 -
 
-COPY --from=TOOLCHAIN /opt/riscv/bin /home/user/riscv/bin
+COPY --from=TOOLCHAIN /opt/riscv /home/user/riscv
 ENV PATH=/home/user/riscv/bin:${PATH}
 
 RUN pip3 install git+https://github.com/riscv/riscof.git
