--- a/.github/actions/with-docker/Dockerfile
+++ b/.github/actions/with-docker/Dockerfile
@@ -1,4 +1,10 @@
 ARG K_VERSION
+ARG TOOLCHAIN_VERSION
+
+ARG TOOLCHAIN_VERSION
+FROM runtimeverificationinc/riscv-gnu-toolchain:ubuntu-jammy-${TOOLCHAIN_VERSION} as TOOLCHAIN
+
+ARG K_VERSION
 FROM runtimeverificationinc/kframework-k:ubuntu-jammy-${K_VERSION}
 
 ARG PYTHON_VERSION=3.10
@@ -20,3 +26,6 @@ WORKDIR /home/user
 
 ENV PATH=/home/user/.local/bin:${PATH}
 RUN curl -sSL https://install.python-poetry.org | python3 -
+
+COPY --from=TOOLCHAIN /opt/riscv /home/user/riscv
+ENV PATH=/home/user/riscv/bin:${PATH}
