--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "kriscv"
-version = "0.1.7"
+version = "0.1.8"
 description = "K tooling for the RISC-V architecture"
 authors = [
     "Runtime Verification, Inc. <contact@runtimeverification.com>",
@@ -16,6 +16,10 @@ riscv-semantics = "kriscv.kdist.plugin"
 [tool.poetry.dependencies]
 python = "^3.10"
 pyk = { git = "https://github.com/runtimeverification/k.git", tag = "v7.0.120", subdirectory = "pyk" }
+pyyaml = "^6.0.1"
+types-pyyaml = "^6.0.12.20240311"
+filelock = "^3.14.0"
+riscof = "^1.25.3"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
