--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /dist/
 __pycache__/
 .coverage
-tests/riscof/work.lock
-tests/riscof/work
+src/tests/integration/riscof/work.lock
+src/tests/integration/riscof/work
