--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/riscv-arch-test"]
-	path = tests/riscof/riscv-arch-test
+	path = tests/riscv-arch-test
 	url = git@github.com:riscv-non-isa/riscv-arch-test.git
