--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,8 +30,8 @@ jobs:
         uses: Gr1N/setup-poetry@v9
       - name: 'Update Poetry files'
         run: |
-          K_VERSION="$(cat deps/k_release)"
-          sed -i 's!kframework = { git = "https://github.com/runtimeverification/k.git", tag = "[v0-9\.]*", subdirectory = "pyk" }!kframework = { git = "https://github.com/runtimeverification/k.git", tag = "v'${K_VERSION}'", subdirectory = "pyk" }!' pyproject.toml
+          K_VERSION=$(cat deps/k_release)
+          sed -i 's!kframework = "[0-9\.]*"!kframework = "'${K_VERSION}'"!' pyproject.toml
           poetry update
           git add . && git commit -m "pyproject.toml: sync pyk version ${K_VERSION}" || true
       - name: 'Push updates'
