--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pyyaml = "^6.0.1"
 types-pyyaml = "^6.0.12.20240311"
 filelock = "^3.14.0"
 riscof = "^1.25.3"
+pyelftools = "^0.26"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
