--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ authors = [
     "Runtime Verification, Inc. <contact@runtimeverification.com>",
 ]
 
+[tool.poetry.scripts]
+kriscv = "kriscv.__main__:main"
+
 [tool.poetry.plugins.kdist]
 riscv-semantics = "kriscv.kdist.plugin"
 
