--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,14 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "kriscv"
-version = "0.1.13"
+version = "0.1.14"
 description = "K tooling for the RISC-V architecture"
 authors = [
     "Runtime Verification, Inc. <contact@runtimeverification.com>",
 ]
+
+[tool.poetry.scripts]
+kriscv = "kriscv.__main__:main"
 
 [tool.poetry.plugins.kdist]
 riscv-semantics = "kriscv.kdist.plugin"
@@ -20,6 +23,7 @@ pyyaml = "^6.0.1"
 types-pyyaml = "^6.0.12.20240311"
 filelock = "^3.14.0"
 riscof = "^1.25.3"
+pyelftools = "^0.26"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
