--- a/src/tests/riscof/config.ini
+++ b/src/tests/riscof/config.ini
@@ -1,6 +1,6 @@
 [RISCOF]
-ReferencePlugin=kriscv
-ReferencePluginPath=src/tests/riscof/kriscv
+ReferencePlugin=sail_cSim
+ReferencePluginPath=src/tests/riscof/sail_cSim
 DUTPlugin=kriscv
 DUTPluginPath=src/tests/riscof/kriscv
 
@@ -9,3 +9,6 @@ pluginpath=src/tests/riscof/kriscv
 ispec=src/tests/riscof/kriscv/kriscv_isa.yaml
 pspec=src/tests/riscof/kriscv/kriscv_platform.yaml
 target_run=1
+
+[sail_cSim]
+pluginpath=src/tests/riscof/sail_cSim
