--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,7 +8,7 @@ jobs:
 
   release:
     name: 'Publish Release'
-    runs-on: [self-hosted, linux, flyweight]
+    runs-on: ubuntu-24.04
     steps:
       - name: 'Check out code'
         uses: actions/checkout@v4
