--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,7 +8,7 @@ jobs:
 
   release:
     name: 'Publish Release'
-    runs-on: [self-hosted, linux, flyweight]
+    runs-on: ubuntu-24.04
     steps:
       - name: 'Check out code'
         uses: actions/checkout@v4
@@ -22,3 +22,24 @@ jobs:
           set -x
           VERSION=v$(cat package/version)
           gh release create ${VERSION} --target ${{ github.sha }}
+
+  notify:
+    name: 'Notify Dependents'
+    runs-on: ubuntu-24.04
+    needs: release
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+      - name: 'Update dependents'
+        env:
+          GITHUB_TOKEN: ${{ secrets.JENKINS_GITHUB_PAT }}
+        run: |
+          set -x
+          VERSION=$(cat package/version)
+          curl --fail                                                          \
+            -X POST                                                            \
+            -H "Accept: application/vnd.github+json"                           \
+            -H "Authorization: Bearer ${GITHUB_TOKEN}"                         \
+            -H "X-GitHub-Api-Version: 2022-11-28"                              \
+            https://api.github.com/repos/runtimeverification/devops/dispatches \
+            -d '{"event_type":"on-demand-test","client_payload":{"repo":"runtimeverification/riscv-semantics","version":"'"${VERSION}"'"}}'
