Add RISC-V assembler support
- Introduced `riscv-assembler` package dependency in `pyproject.toml`.
- Added `AssembleOpts` class for handling assembly instructions.
- Implemented `_kriscv_assemble` function to convert RISC-V instructions to binary format.
- Updated argument parser to include `assemble` command for assembling instructions.

This enhances the functionality for assembling RISC-V instructions directly from the command line.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ types-pyyaml = "^6.0.12.20240311"
 filelock = "^3.14.0"
 riscof = "^1.25.3"
 pyelftools = "^0.26"
+riscv-assembler = "^1.2.1"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
