Refactor RISC-V assembly handling
- Removed the `AssembleOpts` class and associated `_kriscv_assemble` function from the main script.
- Deleted the `scripts/assemble.py` file, which provided a standalone assembly script.
- Added `kriscv-asm` script entry point in `pyproject.toml` for future assembly functionality.

This streamlines the assembly process and prepares for a more integrated approach to RISC-V instruction handling.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ authors = [
 
 [tool.poetry.scripts]
 kriscv = "kriscv.__main__:main"
+kriscv-asm = "kriscv.devtools:kriscv_asm"
 
 [tool.poetry.plugins.kdist]
 riscv-semantics = "kriscv.kdist.plugin"
