--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ kriscv-asm = "kriscv.devtools:kriscv_asm"
 [project.entry-points.kdist]
 riscv-semantics = "kriscv.kdist.plugin"
 
+[project.entry-points.kprovex]
+riscv = "kriscv.symtools:KRiscVPlugin"
+
 [dependency-groups]
 dev = [
     "autoflake",
