Consolidate ELF file handling under class `ELF`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,3 +62,7 @@ skip-string-normalization = true
 
 [tool.mypy]
 disallow_untyped_defs = true
+
+[[tool.mypy.overrides]]
+module = "elftools.*"
+ignore_missing_imports = true
