--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,8 +43,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - name: 'Install Poetry'
-        uses: Gr1N/setup-poetry@v9
+      - name: 'Install uv'
+        uses: astral-sh/setup-uv@v6
       - name: 'Run code quality checks'
         run: make check
       - name: 'Run pyupgrade'
@@ -66,10 +66,8 @@ jobs:
         uses: ./.github/actions/with-docker
         with:
           container-name: ${CONTAINER}
-      - name: 'Build kriscv'
-        run: docker exec --user user ${CONTAINER} poetry install
       - name: 'Build semantics'
-        run: docker exec --user user ${CONTAINER} make kdist-build
+        run: docker exec --user user ${CONTAINER} make kdist
       - name: 'Run unit tests'
         run: docker exec --user user ${CONTAINER} make test-unit
       - name: 'Run integration tests'
