--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
           token: ${{ secrets.JENKINS_GITHUB_PAT }}
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }}
+      - name: 'Install uv'
+        uses: astral-sh/setup-uv@v6
       - name: 'Configure GitHub user'
         run: |
           git config user.name devops
@@ -27,6 +29,7 @@ jobs:
           og_version=$(git show origin/${GITHUB_BASE_REF}:package/version)
           ./package/version.sh bump ${og_version}
           ./package/version.sh sub
+          uv lock
           new_version=$(cat package/version)
           git add --update && git commit --message "Set Version: ${new_version}" || true
       - name: 'Push updates'
