fix version of `uv` in CI

--- a/.github/actions/with-docker/action.yml
+++ b/.github/actions/with-docker/action.yml
@@ -16,11 +16,13 @@ runs:
       TAG=runtimeverificationinc/${CONTAINER_NAME}
       K_VERSION=$(cat deps/k_release)
       TOOLCHAIN_VERSION=$(cat deps/riscv-gnu-toolchain_release)
-      docker build .                                  \
-        --file .github/actions/with-docker/Dockerfile \
-        --tag ${TAG}                                  \
-        --build-arg K_VERSION=${K_VERSION}            \
-        --build-arg TOOLCHAIN_VERSION=${TOOLCHAIN_VERSION}
+      UV_VERSION=$(cat deps/uv_release)
+      docker build .                                       \
+        --file .github/actions/with-docker/Dockerfile      \
+        --tag ${TAG}                                       \
+        --build-arg K_VERSION=${K_VERSION}                 \
+        --build-arg TOOLCHAIN_VERSION=${TOOLCHAIN_VERSION} \
+        --build-arg UV_VERSION=${UV_VERSION}
       docker run                          \
         --name ${CONTAINER_NAME}          \
         --rm                              \
