--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,14 @@ jobs:
           token: ${{ secrets.JENKINS_GITHUB_PAT }}
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }}
+      - name: 'Get uv release'
+        id: uv_release
+        run: |
+          echo uv_version=$(cat deps/uv_release) >> "${GITHUB_OUTPUT}"
       - name: 'Install uv'
         uses: astral-sh/setup-uv@v6
+        with:
+          version: ${{ steps.uv_release.outputs.uv_version }}
       - name: 'Configure GitHub user'
         run: |
           git config user.name devops
@@ -46,8 +52,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+      - name: 'Get uv release'
+        id: uv_release
+        run: |
+          echo uv_version=$(cat deps/uv_release) >> "${GITHUB_OUTPUT}"
       - name: 'Install uv'
         uses: astral-sh/setup-uv@v6
+        with:
+          version: ${{ steps.uv_release.outputs.uv_version }}
       - name: 'Run code quality checks'
         run: make check
       - name: 'Run pyupgrade'
