--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -26,8 +26,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+      - name: 'Get uv release'
+        id: uv_release
+        run: |
+          echo uv_version=$(cat deps/uv_release) >> "${GITHUB_OUTPUT}"
       - name: 'Install uv'
         uses: astral-sh/setup-uv@v6
+        with:
+          version: ${{ steps.uv_release.outputs.uv_version }}
       - name: 'Update uv files'
         run: |
           K_VERSION=$(cat deps/k_release)
