Add extensible prover implementation (#103)
This PR introduces a module `kprovex` that defines an extensible prover
based on `APRPRover`. It has the the following submodules:
* `kprovex.api`: the plugin API definition. A plugin provides the K
definition to the prover, as well as functions for loading and printing
proofs of that definition.
* `kprovex._default`: semantics-agnostic defaults for loading and
printing proofs.
* `kprovex._loader`: plugin loader.
* `kprovex._kprovex`: prover implementation.

Furthermore, it adds a simple plugin implementation for
`riscv-semantics`.

The advantage of this architecture is that `kprovex` can be upstreamed
to `pyk` without breaking it or the `riscv-semantics` prover.
(Naturally, imports still need to be adjusted.)

---------

Co-authored-by: devops <devops@runtimeverification.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "kriscv"
-version = "0.1.100"
+version = "0.1.101"
 description = "K tooling for the RISC-V architecture"
 readme = "README.md"
 requires-python = "~=3.10"
@@ -27,6 +27,9 @@ kriscv-asm = "kriscv.devtools:kriscv_asm"
 
 [project.entry-points.kdist]
 riscv-semantics = "kriscv.kdist.plugin"
+
+[project.entry-points.kprovex]
+riscv = "kriscv.symtools:KRiscVPlugin"
 
 [dependency-groups]
 dev = [
